--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" >
@@ -8,7 +8,7 @@
 <body>
    <div class="container-fluid text-center">
        <h1>Welcome to my application</h1>
-       <a class="h2" href="/user">Manage Users</a>
+       <a class="h2" th:href="@{/users}">Manage Users</a>
    </div>
 </body>
 </html>
