--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -24,6 +24,7 @@
             <th>E-mail</th>
             <th>First Name</th>
             <th>Last Name</th>
+            <th>Enabled</th>
             <th></th>
           </tr>
         </thead>
@@ -34,6 +35,7 @@
               <td>[[${user.email}]]</td>
               <td>[[${user.firstname}]]</td>
               <td>[[${user.lastname}]]</td>
+              <td>[[${user.enabled}]]</td>
               <td>
                 <a class="h5 text-decoration-none" th:href="@{'/users/edit/'+${user.id}}">
                   Edit
